samples/_failures_safe/1761163594_2a5d66_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8886b019.c: In function ‘print_token’:
./samples/SAFE/__tmp_8886b019.c:167:12: error: missing terminating " character
  167 |     printf("Line %
      |            ^~~~~~~
./samples/SAFE/__tmp_8886b019.c:167:5: error: expected expression at end of input
  167 |     printf("Line %
      |     ^~~~~~
./samples/SAFE/__tmp_8886b019.c:167:5: error: expected declaration or statement at end of input
